# perfs_comparison

./: CMakeLists.txt  extract_perf_logs.cpp  extract_phases.cpp  merge_global_stats_all_datasets.sh  merged_full_global_stats_all_datsets.cpp  merged_global_stats_for_a_dataset.cpp  merged_mean_agg_res_stats_all_datasets.cpp  merged_mean_agg_res_stats_for_a_dataset.cpp
perfs_csv/: .~lock.hexaly_mathopt_perf.csv#  comparison_last_values.csv  hexaly_mathopt_perf.csv  hexaly_mathopt_perf.csv.filtered.csv  hexaly_mathopt_perf.csv.gap.selected.csv  hexaly_mathopt_perf.csv.phaseTime.selected.csv  hexaly_mathopt_perf_min_max_phases.csv  hexaly_mathopt_perf_withcmake.csv  hexaly_mathopt_perfs.csv  hexaly_mathopt_perfs_12_threads.csv  hexaly_mathopt_perfs_4_threads.csv  run_all_datasets_hexaly.logperf.csv  run_all_datasets_mathopt.logperf.csv
plots/: comparison_objctives_with_dat.gnuplot  comparison_solve-time_with_dat.gnuplot  comparison_solve-time_with_data_12_4_8_thread.gnuplot  solve_phase_time_12_threads_hexaly.gnuplot  solve_phase_time_12_threads_mathopt.gnuplot  solve_phase_time_4_threads_hexaly.gnuplot  solve_phase_time_4_threads_mathopt.gnuplot  solve_phase_time_hexaly.gnuplot  solve_phase_time_mathopt.gnuplot  solve_time_hexaly.gnuplot  solve_time_mathopt.gnuplot
security_palannifRH/: PlanifRH_Cyber_Securite_Client_Probayes.docx
unnecessary_plots/: GAP_comparison.gnuplot  phase_solve_time_agg_ratio.gnuplot  phase_solve_time_comparison.gnuplot  ratio_solve_time_comparison.gnuplot  run_all_datasets_hexaly.log.gnuplot  run_all_datasets_mathopt.log.gnuplot  (+1 more)
(+370 files in other folders)
