Cmake_minimum_required(VERSION 3.23)

Project(PERFS_COMPARISON)

add_executable(extract_perf_logs)
target_sources(extract_perf_logs
PRIVATE
extract_perf_logs.cpp)

add_executable(extract_phases)
target_sources(extract_phases
PRIVATE
extract_phases.cpp)

add_executable(merged_full_global_stats_all_datsets)
target_sources(merged_full_global_stats_all_datsets
PRIVATE
merged_full_global_stats_all_datsets.cpp)

add_executable(merged_global_stats_for_a_dataset)
target_sources(merged_global_stats_for_a_dataset
PRIVATE
merged_global_stats_for_a_dataset.cpp)

add_executable(merged_mean_agg_res_stats_for_a_dataset)
target_sources(merged_mean_agg_res_stats_for_a_dataset

PRIVATE
merged_mean_agg_res_stats_for_a_dataset.cpp)

add_executable(merged_mean_agg_res_stats_all_datasets)
target_sources(merged_mean_agg_res_stats_all_datasets
PRIVATE
merged_mean_agg_res_stats_all_datasets.cpp
)